modify node path

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "eslint-plugin-standard": "^4.0.1"
   },
   "scripts": {
-    "start": "cross-env NODE_PATH=src node src",
-    "start:dev": "cross-env NODE_PATH=src nodemon --watch src/ src/index.js"
+    "start": "NODE_PATH=src node src",
+    "start:dev": "NODE_PATH=src nodemon --watch src/ src/index.js",
+    "start:win": "cross-env NODE_PATH=src nodemon --watch src/ src/index.js"
   }
 }
