--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "koa": "^2.11.0",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
+    "koa-static": "^5.0.0",
     "mongoose": "^5.7.13"
   },
   "devDependencies": {
