--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
-    "mongoose": "^5.7.13"
+    "mongoose": "^5.7.13",
+    "mongoose-auto-increment-reworked": "^1.2.1"
   },
   "devDependencies": {
     "eslint": "^6.7.2",
