--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "mongoose": "^5.7.13",
-    "mongoose-auto-increment-reworked": "^1.2.1"
+    "mongoose-auto-increment-reworked": "^1.2.1",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "^6.7.2",
